# office_bot

./: .dockerignore  .gitattributes  .gitignore  CITATION.cff  CONTRIBUTING.md  Containerfile  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  compose.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  hardware_bringup.yml  trial_recipe.yml  workflow_example.yml
.github/workflows/: publish-runtime-image.yml  repo-check.yml
container/: download-yolox-checkpoint.sh  openhri-bootstrap-workspace.sh  openhri-container-env.sh  openhri-object-ui.desktop  openhri-office.desktop  start-desktop.sh  start-object-detector.sh  start-openhri.sh  supervisord.conf
dev_ws/: AGENTS.md  frames_2025-06-13_13.22.41.gv  launch_sim.sh
dev_ws/src/object_detector/: package.xml  setup.py
dev_ws/src/object_detector/config/: object_detector.yaml
dev_ws/src/object_detector/object_detector/: __init__.py  datatypes.py  event_log.py  localization.py  model.py  navigation.py  object_detect.py  run_manifest.py  temp.py  tracking.py  web.py
dev_ws/src/object_detector/test/: test_copyright.py  test_detector_logic.py  test_event_log.py  test_run_manifest.py
dev_ws/src/object_detector/tools/: yolox_camera_debug.py
dev_ws/src/object_detector/web/: index.html
dev_ws/src/office_bot_controller_handlers/: CMakeLists.txt  package.xml
dev_ws/src/office_bot_controller_handlers/src/: drawers.cpp  velstamper.cpp  wheel.cpp
dev_ws/src/office_bot_model/: package.xml  setup.cfg  setup.py
dev_ws/src/office_bot_model/config/: config.rviz  navigate_to_pose_no_recovery.xml  robot_config.rviz
dev_ws/src/office_bot_model/controllers/: ekf.yaml  mapper_params_online_async.yaml  nav2_params.yaml  officebotcontroller.yaml  slam_toolbox.yaml
dev_ws/src/office_bot_model/launch/: launch_sdf_into_gazebo.launch.py  set_to_zero.py
dev_ws/src/office_bot_model/models/officebot/: 91292a073_18_8_stainless_steel_socket_head_screw.part  91292a073_18_8_stainless_steel_socket_head_screw.stl  93655a262_male_female_threaded_hex_standoff.part  93655a262_male_female_threaded_hex_standoff.stl  base.part  base.stl  body.part  body.stl  camera.part  camera.stl  config.json  drawer.part  drawer.stl  drawer_1.part  drawer_1.stl  drawer_2.part  drawer_2.stl  drawer_3.part  drawer_3.stl  drawer_4.part  drawer_4.stl  drawer_5.part  drawer_5.stl  lidar.part  lidar.stl  lidar_cap_bottom.part  lidar_cap_bottom.stl  lidar_rain_top.part  lidar_rain_top.stl  plate.part  plate.stl  robot.sdf  robot.urdf  top.part  top.stl  wheel.part  wheel_1.part  wheel_2.part  wheel_3.part  wheel_4.part
dev_ws/src/office_bot_model/models/officebot_xacro/: base.xacro  control.xacro  drawers.xacro  main.urdf  main.xacro  sensors.xacro  wheels.xacro
dev_ws/src/office_bot_model/models/worlds/: empty_world.sdf
dev_ws/src/office_bot_model/models/worlds/office_world/: service.world
dev_ws/src/office_bot_model/models/worlds/office_world/models/actor/: model.sdf
dev_ws/src/office_bot_model/models/worlds/office_world/models/door/: model.sdf
dev_ws/src/office_bot_model/models/worlds/office_world/models/media/materials/scripts/: servicesim.material
dev_ws/src/office_bot_model/office_bot_model/: __init__.py
docs/: asset-attribution.md  component-swap-guide.md  container-quickstart.md  demo-script.md  hardware-bom.md  hardware-readiness-checklist.md  logging-spec.md  object-search-and-approach.md  preview-release-notes.md  quickstart.md  reproducibility.md  researcher-guide.md  runtime-image-release.md  troubleshooting.md  visual-media-guide.md  workflow-guide.md
docs/study-ideas/: README.md  human-guided-object-finding.md  proxemic-approach-comfort.md  transparent-recovery.md  trust-spatial-memory.md
experiments/trials/: bottle-demo.yaml
recipes/trials/: bottle-demo.yaml  bottle-tabletop.yaml  chair-occluded.yaml  chair-visible.yaml  memory-stale-object.yaml  sofa-visible.yaml
scripts/: doctor.sh  repo_check.py  researcher_session.py  test_trial_evaluator.py  trial_evaluator.py  trial_packager.py  trial_runner.py  workflow_session.py
