<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>office_bot_controller_handlers</name>
  <version>0.0.0</version>
  <description>This package contains handlers for all the required controllers with easy to use
    functions</description>
  <maintainer email="thedevmanek@gmail.com">thedevmanek</maintainer>
  <license>TODO: License declaration</license>


  <!-- Dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>